Fixed modal overlay too high in z-index. Added default stylesheet to page. Fixes #124

--- a/src/plugins/modal/_plugin.scss
+++ b/src/plugins/modal/_plugin.scss
@@ -48,7 +48,7 @@
       top: 50%;
       left: 50%;
       transform: translateX(-50%) translateY(-50%) scale(.2, .2);
-      z-index: 100;
+      z-index: 1000000;
 
       // Hiding effect
       transition: $picnic-transition;
